src/scss/react-tooltip.scss
:root {
  --rt-color-white: var(--color-text);
  --rt-color-dark: var(--background-color);
  --rt-color-success: #8dc572;
  --rt-color-error: var(--color-error);
  --rt-color-warning: var(--color-warning);
  --rt-color-info: var(--color-info);
  --rt-opacity: 0.95;
}

.styles-module_tooltip__mnnfp {
  border-radius: 3px;
  font-size: 90%;
  left: 0;
  opacity: 0;
  padding: 8px 16px;
  pointer-events: none;
  position: absolute;
  top: 0;
  transition: opacity .3s ease-out;
  visibility: hidden;
  width: max-content;
  will-change: opacity, visibility;
  z-index: 999;

  ul {
    margin-bottom: .5em;
    margin-top: .5em;
    padding-left: 1.5em;
  }
}

.styles-module_fixed__7ciUi {
  position: fixed;
}

.styles-module_arrow__K0L3T {
  background: inherit;
  border-left: 1px solid var(--rt-color-white);
  border-top: 1px solid var(--rt-color-white);
  height: 8px;
  position: absolute;
  transform: rotate(45deg);
  width: 8px;
}

.styles-module_no-arrow__KcFZN {
  display: none;
}

.styles-module_clickable__Bv9o7 {
  pointer-events: auto;
}

.styles-module_show__2NboJ {
  border: 1px solid var(--rt-color-white);
  opacity: var(--rt-opacity);
  visibility: visible;
}

// Types variant
.styles-module_dark__xNqje {
  background: var(--rt-color-dark);
  box-shadow: inset 0 0 0.5em var(--background-light);
  color: var(--rt-color-white);
}

.styles-module_light__Z6W-X {
  background-color: var(--rt-color-white);
  color: var(--rt-color-dark);
  box-shadow: inset 0 0 0.5em var(--background-light);
}

.styles-module_success__A2AKt {
  background-color: var(--rt-color-success);
  color: var(--rt-color-white);
}

.styles-module_warning__SCK0X {
  background-color: var(--rt-color-warning);
  color: var(--rt-color-white);
}

.styles-module_error__JvumD {
  background-color: var(--rt-color-error);
  color: var(--rt-color-white);
}

.styles-module_info__BWdHW {
  background-color: var(--rt-color-info);
  color: var(--rt-color-white);
}

